// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Select /> disabled renders correctly 1`] = `
<StyledComponent
  bg="white"
  border={2}
  borderColor="greys.alto"
  color="greys.charcoal"
  disabled={true}
  fontSize="base"
  forwardedRef={null}
  is={[Function]}
  lineHeight="normal"
  mb={3}
  px={4}
  py={3}
  readonlyVariant="naked"
>
  Options
</StyledComponent>
`;

exports[`<Select /> readOnly renders correctly 1`] = `
<StyledComponent
  bg="white"
  border={2}
  borderColor="greys.alto"
  color="greys.charcoal"
  fontSize="base"
  forwardedRef={null}
  is={[Function]}
  lineHeight="normal"
  mb={3}
  px={4}
  py={3}
  readOnly={true}
  readonlyVariant="naked"
>
  Options
</StyledComponent>
`;

exports[`<Select /> renders correctly 1`] = `
<StyledComponent
  bg="white"
  border={2}
  borderColor="greys.alto"
  color="greys.charcoal"
  fontSize="base"
  forwardedRef={null}
  is={[Function]}
  lineHeight="normal"
  mb={3}
  px={4}
  py={3}
  readonlyVariant="naked"
>
  Options
</StyledComponent>
`;

exports[`<Select /> underline renders correctly 1`] = `
<StyledComponent
  bg="white"
  border={2}
  borderColor="greys.alto"
  color="greys.charcoal"
  fontSize="base"
  forwardedRef={null}
  is={[Function]}
  lineHeight="normal"
  mb={3}
  px={4}
  py={3}
  readonlyVariant="naked"
  underline={true}
>
  Options
</StyledComponent>
`;
